# lume

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  vesl.toml.example
.fakenet/hub/: .nockchain_identity  .nockchain_identity.peerid
.fakenet/hub/.data.nockchain/checkpoints/: 0.chkjam
.fakenet/miner/: .nockchain_identity  .nockchain_identity.peerid
.fakenet/miner/.data.nockchain/checkpoints/: 0.chkjam
.github/workflows/: ci.yml
assets/: CHECKSUMS.sha256
crates/nock-noun-rs/: Cargo.toml
crates/nockchain-client-rs/: Cargo.toml
crates/nockchain-client-rs/src/: note_data.rs
crates/nockchain-tip5-rs/: Cargo.toml  README.md
crates/nockchain-tip5-rs/src/: lib.rs
crates/vesl-core/: Cargo.toml
crates/vesl-core/src/: config.rs  forge.rs  guard.rs  kraken.rs  lib.rs  mint.rs  noun_builder.rs  settle.rs  signing.rs  tx_builder.rs  types.rs  vigil.rs
crates/vesl-core/src/graft_pokes/: forge.rs  mod.rs  settle.rs
crates/vesl-mantle/: Cargo.toml
crates/vesl-mantle/src/: anchor.rs  kraken.rs  lib.rs  sigil.rs  signing.rs  tx_builder.rs  types.rs  vigil.rs
docker/: README.md
docs/: graft-manifest.md
hoon/lib/: anchor-kernel.hoon  forge-kernel.hoon  guard-kernel.hoon  lume-test.hoon  mint-kernel.hoon  rag-logic.hoon  settle-kernel.hoon  sigil-kernel.hoon  vesl-mint.hoon  vesl-sigil.hoon  vigil-kernel.hoon
hull/: Cargo.toml
hull-rag/: Cargo.toml
hull-rag/src/: api.rs  chain.rs  config.rs  main.rs  noun_builder.rs  signing.rs  tx_builder.rs
hull-rag/tests/: e2e_adversarial.rs  e2e_core.rs  e2e_fakenet.rs  e2e_forge.rs
hull/src/: api.rs  chain.rs  config.rs  lib.rs  main.rs  noun_builder.rs  signing.rs  types.rs  verify.rs
hull/tests/: e2e_adversarial.rs  e2e_fakenet.rs  e2e_ollama.rs  e2e_prover.rs
kernels/anchor/: Cargo.toml  build.rs
kernels/forge/: Cargo.toml  build.rs
kernels/guard/: Cargo.toml  build.rs
kernels/guard/src/: lib.rs
kernels/mint/: Cargo.toml  build.rs
kernels/mint/src/: lib.rs
kernels/settle/: Cargo.toml  build.rs
kernels/settle/src/: lib.rs
kernels/sigil/: Cargo.toml  build.rs
kernels/vigil/: Cargo.toml  build.rs
protocol/lib/: README.md  anchor-kernel.hoon  forge-graft.hoon  forge-graft.toml  forge-kernel.hoon  guard-kernel.hoon  lume-kernel.hoon  lume-test.hoon  mint-kernel.hoon  rag-logic.hoon  settle-kernel.hoon  sigil-kernel.hoon  vesl-entrypoint.hoon  vesl-graft.hoon  vesl-graft.toml  vesl-kernel.hoon  vesl-mint.hoon  vesl-sigil.hoon  vesl-stark-verifier.hoon  vesl-verifier.hoon  vigil-kernel.hoon
protocol/sur/: vesl.hoon
protocol/tests/: cross-vm.hoon  example-lume-test.hoon  example-vesl-test.hoon  red-team.hoon  root-hash.hoon  settle-note.hoon  test-entrypoint.hoon  test-forge.hoon  test-graft-generic.hoon  test-graft-security.hoon  test-graft.hoon  verify-manifest.hoon  verify-retrieval.hoon
scripts/: .env.fakenet  demo.sh  fakenet-harness.sh
templates/: GRAFTING.md  README.md
templates/graft-anchor/: Cargo.toml  README.md  build.rs
templates/graft-anchor/hoon/app/: app.hoon
templates/graft-anchor/hoon/lib/: vesl-logic.hoon
templates/graft-anchor/src/: main.rs
templates/graft-intent/: Cargo.toml  README.md
templates/graft-intent/hoon/app/: app.hoon
templates/graft-intent/hoon/lib/: vesl-graft.hoon
templates/graft-intent/src/: main.rs
templates/graft-mint/: README.md  build.rs
templates/graft-mint/hoon/app/: app.hoon
templates/graft-mint/src/: main.rs
templates/graft-scaffold/hoon/app/: app.hoon
templates/graft-scaffold/src/: main.rs
templates/graft-settle/: README.md
templates/graft-settle/hoon/app/: app.hoon
templates/graft-settle/hoon/lib/: vesl-graft.hoon
templates/graft-settle/src/: main.rs
templates/graft-sigil/: Cargo.toml  README.md
templates/graft-sigil/hoon/app/: app.hoon
templates/graft-sigil/src/: main.rs
vessel/: Cargo.toml
vessel/src/: api.rs  chain.rs  lib.rs  main.rs  merkle.rs  noun_builder.rs  signing.rs  tx_builder.rs  types.rs  wallet_kernel.rs
vessel/tests/: e2e_adversarial.rs  e2e_fakenet.rs  e2e_ollama.rs
