[package]
name = "nock-noun-rs"
version = "0.1.0"
edition = "2024"
description = "Ergonomic Nock noun construction from Rust — NockStack helpers, cord/tag builders, jam/cue utilities"
license = "MIT"

[dependencies]
# Nockchain monorepo crates (git-dep so downstream consumers can git-dep this crate)
nockvm = { git = "https://github.com/zorp-corp/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockapp = { git = "https://github.com/zorp-corp/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a", default-features = false }
