[package]
name = "nockchain-client-rs"
version = "0.1.0"
edition = "2024"
description = "Nockchain gRPC client — chain queries, wallet coordination, NoteData encoding for NockApp developers"
license = "MIT"

[dependencies]
# Nockchain monorepo crates (git-dep so downstream consumers can git-dep this crate)
nockvm = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockapp = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a", default-features = false }
nockapp-grpc = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockchain-types = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
noun-serde = { git = "https://github.com/nockchain/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }

# Vesl extracted crates
nockchain-tip5-rs = { path = "../nockchain-tip5-rs" }

# Standard deps
anyhow = "1.0"
tokio = { version = "1", features = ["time"] }
