[package]
name = "vesl-core"
version = "0.5.0"
edition = "2024"
description = "High-level Vesl SDK — Mint/Guard/Settle/Forge facades over the extracted crate stack"
license = "MIT"

[dependencies]
# Sibling extracted crates
nockchain-tip5-rs = { path = "../nockchain-tip5-rs", features = ["serde"] }
nock-noun-rs = { path = "../nock-noun-rs" }
nockchain-client-rs = { path = "../nockchain-client-rs" }

# Nockchain monorepo crates (git-dep so downstream consumers can git-dep vesl-core)
nockapp = { git = "https://github.com/zorp-corp/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a", default-features = false }
nockvm = { git = "https://github.com/zorp-corp/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockchain-types = { git = "https://github.com/zorp-corp/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
noun-serde = { git = "https://github.com/zorp-corp/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
nockvm_macros = { git = "https://github.com/zorp-corp/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }
ibig = { git = "https://github.com/zorp-corp/nockchain.git", rev = "a19f8017ef2f0ee38ea7c850a84189f817a9f93a" }

# Standard deps
anyhow = "1.0"
bytes = "1"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"
clap = { version = "4", features = ["derive"], optional = true }

[features]
default = []
clap = ["dep:clap"]
